--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "test_tech.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "serve": "./node_modules/.bin/webpack ./app.js --mode=development --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0"
   }
 }
